[package]
name = "poisson-cam"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
faster_poisson = { version = "1.1.0", path = "../faster-poisson-disk-sampling", features = ["gpu"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.104"
winit = { version = "0.29" }
wgpu = "26.0.1"
env_logger = "0.11.8"
wasm-bindgen-futures = "0.4.54"
bytemuck = "1.24.0"
flume = "0.11.1"

[dependencies.web-sys]
version = "0.3.81"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlVideoElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "HtmlCanvasElement",
    "console",
    "HtmlInputElement",
    # "EventTarget",
]
